@@ -5,7 +5,7 @@
 
 Not to mention all bugfixes and rewrites.
 
-Coccinella-0.95.10 (0509??):
+Coccinella-0.95.10 (0510??):
 
 	- server connections using http possible; http proxy added
 	- added the tkpng package; png support now required
@@ -16,6 +16,7 @@ Coccinella-0.95.10 (0509??):
 	- number of unread chat messages shown in tabs and title
 	- historic chat messages in lighter color
 	- support for conference bookmarks according to JEP-0048
+	- whiteboard actions are now constrained to the actual scroll region
 
 Coccinella-0.95.9 (050821):
 
